--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -194,9 +194,11 @@
       width: 214px
       &:not(:last-of-type)
         margin-right: 28px
+  .logos
+    &__item
+      width: 120px
   .footer
     &-about--mb,&-ehya 
-
       flex-wrap: wrap      
 @media (max-width:767px)
 
