--- a/sass/blocks/_logos.sass
+++ b/sass/blocks/_logos.sass
@@ -3,11 +3,13 @@
   background-color: $logo-color
   &-list
     display: flex
+    justify-content: space-around
     &--mb
       margin-bottom: 53px
       margin-top: 50px
   &-second
     display: flex
+    justify-content: space-around
   &__title
     margin: 0
     font-family: 'Roboto Condensed', sans-serif
@@ -18,3 +20,6 @@
     line-height: 32px
     text-align: center
     letter-spacing: 0.2px
+  &__item
+    max-width: 150px
+
